@@ -38,10 +38,11 @@
 	<tr valign="top">
 		<th><a href="border">Border</a>
 		</th>
-		<td><img align="right" border="0" hspace="4" src="images/show-inspector-button.jpg">An example of a useful, reusable component, a common navigation border for a set of pages.
+		<td><img align="right" border="0" hspace="4" src="images/show-inspector.gif">An example of a useful, reusable component, a common navigation border for a set of pages.
 <p>In addition, the tapestry Inspector makes its
-    first appearance.  This is a built-in mini-application that allows you to view how a running
-    application is constructed.  Check it out --- its the most impressive demo here.
+    first appearance.  Click the animated icon in the lower left corner of
+    the page to launch a mini-application that allows you to view how a running
+    application is constructed.  Check it out --- the Inspector the most impressive demo here.
 		</td>
 	</tr>
 	<tr valign="top" bgcolor="silver">
