@@ -1,2 +1,29 @@
 <!-- $Id$ -->
-<a jwcid="link"><img jwcid="button" width=40 height=40 alt="Show Inspector"/></a>
+
+<span jwcid="$content$">
+
+
+<span id="tapestryInspector" style="position:absolute; left:0; top:0; visibility:hidden">
+
+
+
+<OBJECT CLASSID="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" 
+	WIDTH="52" HEIGHT="52" 
+	CODEBASE="http://active.macromedia.com/flash5/cabs/swflash.cab#version=5,0,0,0">
+<PARAM jwcid="movieName1" NAME="MOVIE"/>
+<PARAM NAME="PLAY" VALUE="true">
+<PARAM NAME="LOOP" VALUE="true">
+<PARAM NAME="QUALITY" VALUE="high">
+
+<EMBED jwcid="movieName2" 
+	WIDTH="52" HEIGHT="52" PLAY="true" 
+	LOOP="true" QUALITY="high" 
+	PLUGINSPAGE="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"> 
+</EMBED>
+
+</OBJECT>
+
+</span>
+
+</span>
+
